# teLLMe

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  docker-compose.yml  litellm-config.yaml  pyproject.toml  requirements.txt
docker/: Dockerfile.code2llm  Dockerfile.gateway  Dockerfile.stts
tellme/: __init__.py  cli.py  gateway.py
tellme/services/: __init__.py  code2llm_api.py  stts_api.py
tests/: test_cli.py  test_gateway.py
