[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tellme"
dynamic = ["version"]
description = "teLLMe — Unified voice+LLM platform for local code, media, and service control via wronai ecosystem (stts, nlp2cmd, code2llm, toonic, litellm)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = [
    "voice", "llm", "nlp", "code-analysis", "monitoring",
    "speech-to-text", "text-to-speech", "docker", "microservices",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]

[project.scripts]
tellme = "tellme.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/teLLMe"
Repository = "https://github.com/wronai/teLLMe"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["tellme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
